templates/firewall.json
{
    "AWSTemplateFormatVersion": "2010-09-09",
    "Description": "AWS CloudFormation BLAH **WARNING** This template creates an Amazon EC2 instance. You will be billed for the AWS resources used if you create a stack from this template.",
    "Outputs": {
        "AppALBSG": {
            "Export": {
                "Name": {
                    "Fn::Join": [
                        "-",
                        [
                            {
                                "Ref": "AWS::StackName"
                            },
                            "AppALBSG"
                        ]
                    ]
                }
            },
            "Value": {
                "Ref": "AppALBSG"
            }
        },
        "AppInstanceSG": {
            "Export": {
                "Name": {
                    "Fn::Join": [
                        "-",
                        [
                            {
                                "Ref": "AWS::StackName"
                            },
                            "AppInstanceSG"
                        ]
                    ]
                }
            },
            "Value": {
                "Ref": "AppInstanceSG"
            }
        },
        "DBSG": {
            "Export": {
                "Name": {
                    "Fn::Join": [
                        "-",
                        [
                            {
                                "Ref": "AWS::StackName"
                            },
                            "DBSG"
                        ]
                    ]
                }
            },
            "Value": {
                "Ref": "DBSG"
            }
        },
        "WebALBSG": {
            "Export": {
                "Name": {
                    "Fn::Join": [
                        "-",
                        [
                            {
                                "Ref": "AWS::StackName"
                            },
                            "WebALBSG"
                        ]
                    ]
                }
            },
            "Value": {
                "Ref": "WebALBSG"
            }
        },
        "WebInstanceSG": {
            "Export": {
                "Name": {
                    "Fn::Join": [
                        "-",
                        [
                            {
                                "Ref": "AWS::StackName"
                            },
                            "WebInstanceSG"
                        ]
                    ]
                }
            },
            "Value": {
                "Ref": "WebInstanceSG"
            }
        }
    },
    "Parameters": {
        "NetworkingStackName": {
            "Default": "Networking-Stack",
            "Description": "NetworkingStackName",
            "Type": "String"
        }
    },
    "Resources": {
        "AppALBEngress": {
            "Properties": {
                "Description": "App ALB Egress to App Instance",
                "DestinationSecurityGroupId": {
                    "Ref": "DBSG"
                },
                "FromPort": 8443,
                "GroupId": {
                    "Ref": "AppALBSG"
                },
                "IpProtocol": "TCP",
                "ToPort": 8443
            },
            "Type": "AWS::EC2::SecurityGroupEgress"
        },
        "AppALBIngress": {
            "Properties": {
                "Description": "App ALB Ingress from App Instance",
                "FromPort": 443,
                "GroupId": {
                    "Ref": "AppALBSG"
                },
                "IpProtocol": "TCP",
                "SourceSecurityGroupId": {
                    "Ref": "WebInstanceSG"
                },
                "ToPort": 443
            },
            "Type": "AWS::EC2::SecurityGroupIngress"
        },
        "AppALBSG": {
            "Properties": {
                "GroupDescription": "Application Load Balancer Security Group",
                "GroupName": "App ALB SG",
                "VpcId": {
                    "Fn::ImportValue": {
                        "Fn::Sub": "${NetworkingStackName}-VPCId"
                    }
                }
            },
            "Type": "AWS::EC2::SecurityGroup"
        },
        "AppEngress": {
            "Properties": {
                "Description": "App Server Egress to DB",
                "DestinationSecurityGroupId": {
                    "Ref": "DBSG"
                },
                "FromPort": 5432,
                "GroupId": {
                    "Ref": "AppInstanceSG"
                },
                "IpProtocol": "TCP",
                "ToPort": 5432
            },
            "Type": "AWS::EC2::SecurityGroupEgress"
        },
        "AppIngress": {
            "Properties": {
                "Description": "App Server Ingress from Internal Application Load Balancer",
                "FromPort": 8443,
                "GroupId": {
                    "Ref": "AppInstanceSG"
                },
                "IpProtocol": "TCP",
                "SourceSecurityGroupId": {
                    "Ref": "AppALBSG"
                },
                "ToPort": 8443
            },
            "Type": "AWS::EC2::SecurityGroupIngress"
        },
        "AppInstanceSG": {
            "Properties": {
                "GroupDescription": "Application Instance Security Group",
                "GroupName": "App Instance SG",
                "VpcId": {
                    "Fn::ImportValue": {
                        "Fn::Sub": "${NetworkingStackName}-VPCId"
                    }
                }
            },
            "Type": "AWS::EC2::SecurityGroup"
        },
        "DBIngress": {
            "Properties": {
                "Description": "db Ingress from app instance",
                "FromPort": 5432,
                "GroupId": {
                    "Ref": "DBSG"
                },
                "IpProtocol": "TCP",
                "SourceSecurityGroupId": {
                    "Ref": "AppInstanceSG"
                },
                "ToPort": 5432
            },
            "Type": "AWS::EC2::SecurityGroupIngress"
        },
        "DBSG": {
            "Properties": {
                "GroupDescription": "Database Security Group",
                "GroupName": "DB SG",
                "SecurityGroupEgress": [
                    {
                        "CidrIp": "127.0.0.1/32",
                        "IpProtocol": "-1"
                    }
                ],
                "VpcId": {
                    "Fn::ImportValue": {
                        "Fn::Sub": "${NetworkingStackName}-VPCId"
                    }
                }
            },
            "Type": "AWS::EC2::SecurityGroup"
        },
        "WebALBEngress": {
            "Properties": {
                "Description": "Egress to Web Server",
                "DestinationSecurityGroupId": {
                    "Ref": "WebInstanceSG"
                },
                "FromPort": 443,
                "GroupId": {
                    "Ref": "WebALBSG"
                },
                "IpProtocol": "TCP",
                "ToPort": 443
            },
            "Type": "AWS::EC2::SecurityGroupEgress"
        },
        "WebALBIngress": {
            "Properties": {
                "CidrIp": "0.0.0.0/0",
                "Description": "Opened Ingress",
                "FromPort": 443,
                "GroupId": {
                    "Ref": "WebALBSG"
                },
                "IpProtocol": "TCP",
                "ToPort": 443
            },
            "Type": "AWS::EC2::SecurityGroupIngress"
        },
        "WebALBSG": {
            "Properties": {
                "GroupDescription": "ALB Security Group",
                "GroupName": "ALB SG",
                "VpcId": {
                    "Fn::ImportValue": {
                        "Fn::Sub": "${NetworkingStackName}-VPCId"
                    }
                }
            },
            "Type": "AWS::EC2::SecurityGroup"
        },
        "WebEngress": {
            "Properties": {
                "Description": "Web Server Egress to Internal Application Load Balancer",
                "DestinationSecurityGroupId": {
                    "Ref": "AppALBSG"
                },
                "FromPort": 443,
                "GroupId": {
                    "Ref": "WebInstanceSG"
                },
                "IpProtocol": "TCP",
                "ToPort": 443
            },
            "Type": "AWS::EC2::SecurityGroupEgress"
        },
        "WebIngress": {
            "Properties": {
                "Description": "Web Server Ingress from Web Application Load Balancer",
                "FromPort": 443,
                "GroupId": {
                    "Ref": "WebInstanceSG"
                },
                "IpProtocol": "TCP",
                "SourceSecurityGroupId": {
                    "Ref": "WebALBSG"
                },
                "ToPort": 443
            },
            "Type": "AWS::EC2::SecurityGroupIngress"
        },
        "WebInstanceSG": {
            "Properties": {
                "GroupDescription": "Web Instance Security Group",
                "GroupName": "Web Instance SG",
                "VpcId": {
                    "Fn::ImportValue": {
                        "Fn::Sub": "${NetworkingStackName}-VPCId"
                    }
                }
            },
            "Type": "AWS::EC2::SecurityGroup"
        }
    }
}
